--- a/css/generalstyle.css
+++ b/css/generalstyle.css
@@ -185,3 +185,18 @@ main {
     white-space: nowrap;
     margin-top: 5px;
 }
+
+footer {
+    position: fixed;
+    bottom: 0px;
+    text-align: center;
+    width: 100%;
+    height: 35px;
+    background-color: rgba(0, 0, 0, 0.1);
+    color: #555;
+}
+
+footer a {
+    text-decoration: none;
+    color: #555;
+}
